# plonky2

./: Cargo.toml  fri_soundness.py
evm/: Cargo.toml
evm/src/cpu/kernel/: aggregator.rs
evm/src/cpu/kernel/asm/hash/blake2b/: compression.asm
evm/src/cpu/kernel/asm/hash/sha2/: compression.asm
evm/src/cpu/kernel/tests/: bignum.rs
evm/src/generation/: prover_input.rs
field/: Cargo.toml
keccak/: Cargo.toml
keccak/examples/: bench_keccak.rs
keccak/src/: keccak.rs  lib.rs  logic.rs  registers.rs  round_flags.rs
plonky2/: Cargo.toml
plonky2/src/plonk/: plonk_common.rs
plonky2/src/util/: reducing.rs
starky/: Cargo.toml
starky/src/: lib.rs
system_zero/src/: memory.rs  system_zero.rs
system_zero/src/registers/: memory.rs
u32/: Cargo.toml
waksman/: Cargo.toml
