[package]
name = "keccak"
description = "TOOD"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = { path = "../plonky2" }
plonky2_util = { path = "../util" }
starky = { path = "../starky" }
anyhow = "1.0.40"
itertools = "0.10.0"
log = "0.4.14"
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3.5"
env_logger = "0.9.0"
